# spark_flow

./: README.md  airflow.cfg  airflow.db  pyproject.toml  pyspark_movie.py  standalone_admin_password.txt
dags/: .pyspark_movie.py.swp  movies-dynamic-json.py  pyspark_movie.py
py/: movie_join_df.py  movie_sum_df.py
src/airflow_spark/: re.py
tests/: test_re.py
